--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
     "markdown-it": "^13.0.1",
     "marked": "^4.1.1",
     "next": "12.3.1",
+    "next-seo": "^5.6.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "rehype-stringify": "^9.0.3",
+    "remark-parse": "^10.0.1",
+    "remark-rehype": "^10.1.0",
+    "remark-toc": "^8.0.1",
+    "unified": "^10.1.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
