--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "next-seo": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype-parse": "^8.0.4",
+    "rehype-react": "^7.1.1",
+    "rehype-slug": "^5.0.1",
     "rehype-stringify": "^9.0.3",
     "remark-parse": "^10.0.1",
+    "remark-prism": "^1.3.6",
     "remark-rehype": "^10.1.0",
     "remark-toc": "^8.0.1",
     "unified": "^10.1.2"
