--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gray-matter": "^4.0.3",
     "markdown-it": "^13.0.1",
     "marked": "^4.1.1",
+    "mdast-util-toc": "^6.1.0",
     "next": "12.3.1",
     "next-seo": "^5.6.0",
     "react": "18.2.0",
@@ -24,7 +25,9 @@
     "remark-prism": "^1.3.6",
     "remark-rehype": "^10.1.0",
     "remark-toc": "^8.0.1",
-    "unified": "^10.1.2"
+    "remark-unwrap-images": "^3.0.1",
+    "unified": "^10.1.2",
+    "unist-util-visit": "^4.1.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
